<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="734dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/fondo2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_title_agenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/txt_title_agenda"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/btn_consultarAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0DC6CD"
        android:fontFamily="serif"
        android:text="@string/btn_consultarAgenda"
        android:textAlignment="center"
        android:textColor="#040D6C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_consultarAgenda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextDate"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/editTextTitleAct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_agenda"
        app:layout_constraintVertical_bias="0.689" />

    <EditText
        android:id="@+id/editTextTitleAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextTitleAct"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etxt_detalleEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_agenda"
        app:layout_constraintVertical_bias="0.772" />

    <EditText
        android:id="@+id/etxt_detalleEvent"
        android:layout_width="379dp"
        android:layout_height="93dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/etxt_detalleEvent"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_agenda"
        app:layout_constraintVertical_bias="0.887" />

    <Button
        android:id="@+id/btn_agregar_agenda"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:backgroundTint="#34CA40"
        android:shadowColor="#3DDD49"
        android:text="@string/btn_agregar_agenda"
        android:textColor="#03372E"
        android:textColorLink="#75E848"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_agenda"
        app:layout_constraintVertical_bias="0.074"
        app:rippleColor="#3FEC4C"
        app:strokeColor="#E48939" />

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#006064"
        android:text="@string/btn_atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_siguiente"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consultarAgenda"
        app:layout_constraintVertical_bias="0.945" />

    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#006064"
        android:text="@string/btn_siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consultarAgenda"
        app:layout_constraintVertical_bias="0.945" />

    <TextView
        android:id="@+id/txv_titleAgendaCons"
        android:layout_width="321dp"
        android:layout_height="26dp"
        android:hint="@string/txv_titleAgendaCons"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consultarAgenda"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/txv_fechaAgendaCons"
        android:layout_width="200dp"
        android:layout_height="31dp"
        android:hint="@string/txv_fechaAgendaCons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_titleAgendaCons"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/txv_detalleAgendaCons"
        android:layout_width="328dp"
        android:layout_height="117dp"
        android:hint="@string/txv_detalleAgendaCons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_fechaAgendaCons"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/txv_Id_agenda"
        android:layout_width="85dp"
        android:layout_height="31dp"
        android:hint="@string/txv_Id_agenda"
        app:layout_constraintBottom_toTopOf="@+id/txv_detalleAgendaCons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txv_fechaAgendaCons"
        app:layout_constraintTop_toBottomOf="@+id/txv_titleAgendaCons" />

</androidx.constraintlayout.widget.ConstraintLayout>