<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="439dp"
        android:layout_height="789dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fondo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-29dp" />

    <TextView
        android:id="@+id/txt_uName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/txt_uName"
        android:textAlignment="center"
        android:textColor="#470202"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/txt_uName2"
        android:layout_width="296dp"
        android:layout_height="47dp"
        android:fontFamily="monospace"
        android:text="@string/txt_uName2"
        android:textAlignment="center"
        android:textColor="#470202"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/txt_uName5"
        android:layout_width="296dp"
        android:layout_height="47dp"
        android:fontFamily="monospace"
        android:text="@string/txt_uName5"
        android:textAlignment="center"
        android:textColor="#470202"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/txt_uName4"
        android:layout_width="296dp"
        android:layout_height="47dp"
        android:fontFamily="monospace"
        android:text="@string/txt_uName4"
        android:textAlignment="center"
        android:textColor="#470202"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <TextView
        android:id="@+id/txt_uName3"
        android:layout_width="296dp"
        android:layout_height="47dp"
        android:fontFamily="monospace"
        android:text="@string/txt_uName3"
        android:textAlignment="center"
        android:textColor="#470202"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <TextView
        android:id="@+id/txt_uName6"
        android:layout_width="175dp"
        android:layout_height="31dp"
        android:fontFamily="monospace"
        android:text="@string/txt_uName6"
        android:textAlignment="center"
        android:textColor="#470202"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="384dp"
        android:layout_height="287dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        app:srcCompat="@drawable/logoumb" />


</androidx.constraintlayout.widget.ConstraintLayout>